# gymlogger

./: .gitignore  CMakeLists.txt  gymlogger.desktop
android/: AndroidManifest.xml
android/res/drawable/: splash.xml
src/: CMakeLists.txt  ExerciseModel.cpp  ExerciseModel.h  PlanModel.cpp  PlanModel.h  SessionModel.cpp  SessionModel.h  main.cpp
src/qml/: ActiveTimerSection.qml  ActiveWorkoutPage.qml  AddPlanPage.qml  CalendarGrid.qml  EditPlanPage.qml  ExerciseDb.js  ExerciseGridCard.qml  ExerciseInfoCard.qml  LogPage.qml  Main.qml  PlanPage.qml  PlanWorkoutUtils.js  ReminderSection.qml  SetRow.qml  WorkoutDetailPage.qml  WorkoutPage.qml  WorkoutPlanCard.qml
